--- a/exencio.html
+++ b/exencio.html
@@ -6,7 +6,7 @@
 
 <p>The <strong>input type="email"</strong> is used for input fields that should contain an e-mail address:</p>
 
-<form action="/action_page.php">
+<form action="">
   <label for="email">Enter your email:</label>
   <input type="email" id="email" name="email">
   <input type="submit" value="Submit">
