--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 
 <form action="exencio.html">
   <label for="fname">Primeiro nome:</label><br>
-  <input type="text" id="fname" name="fname" value="Victor Hugo"><br>
+  <input type="text" id="fname" name="fname" value=""><br>
   <label for="lname">Sobrenome:</label><br>
-  <input type="text" id="lname" name="lname" value="Meneses Pereira"><br><br>
+  <input type="text" id="lname" name="lname" value=""><br><br>
   <input type="submit" value="Confirmar">
 </form> 
 
