--- a/exencio.html
+++ b/exencio.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>CSS Template</title>
+<title>Apresentação</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
@@ -71,27 +71,27 @@ footer {
 </head>
 <body>
 
-<h2>CSS Layout Float</h2>
-<p>In this example, we have created a header, two columns/boxes and a footer. On smaller screens, the columns will stack on top of each other.</p>
-<p>Resize the browser window to see the responsive effect (you will learn more about this in our next chapter - HTML Responsive.)</p>
+<h2>Apresentação do Laranjal</h2>
+<p>Nesta apresentação vamos relatar sobre o municipio de Laranjal Pr.</p>
+<p>É uma cidade localizada no Centro Sul Paranaense</p>
 
 <header>
-  <h2>Cities</h2>
+  <h2>Cidade</h2>
 </header>
 
 <section>
   <nav>
     <ul>
-      <li><a href="#">London</a></li>
-      <li><a href="#">Paris</a></li>
-      <li><a href="#">Tokyo</a></li>
+      <li><a href="#">Laranjal</a></li>
+      <li><a href="#">Assent. Chapadão</a></li>
+      <li><a href="#">Mapa da Cidade</a></li>
     </ul>
   </nav>
   
   <article>
-    <h1>London</h1>
-    <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
-    <p>Standing on the River Thames, London has been a major settlement for two millennia, its history going back to its founding by the Romans, who named it Londinium.</p>
+    <h1>Laranjal Pr</h1>
+    <p>Laranjal é uma área com  555,093 km² (mapa 01), fazendo limite com os municipios: ao norte com Nova Cantu,a oeste com Palmital, ao Sul Nova Laranjeiras, a sudoeste com Diamante do Sul e noroeste com Altamira do Paraná.</p>
+    <p>Laranjal Pr iniciou na década de 30, qundo surgiram os primeiros pioneros atraidos pelas terra férteis e pelos preços acessiveis da terra. A principal atividade do Municipio de laranjal é Agricultura e Pecuaria.</p>
   </article>
 </section>
 
